# multilogin

./: README.md  boot_django.py  makemigrations.py  requirements.txt  setup.cfg
multilogin/: admin.py  apps.py  auth_backend.py  urls.py
multilogin/auth_backends/: discord.py
multilogin/authlib_configs/: __init__.py  discord.py
multilogin/migrations/: 0001_initial.py  0002_alter_oauthtoken_options_and_more.py
multilogin/models/: __init__.py  discord_login.py  oauth_token.py
multilogin/multilogin/: __init__.py  main.py  urls.py  user_info.py
multilogin/multilogin/backends/: discord.py
multilogin/views/: __init__.py  login.py  redirect.py
multilogin/views/login/: discord.py  urls.py
sample_project/: local_settings.py.template
sample_project/base_app/: urls.py  views.py
sample_project/base_app/templates/: base.html
sample_project/base_app/templates/base_app/: index.html  login_required.html  register.html
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
