[metadata]
name = multilogin
version = 1.0.0
description = Django app to login with OAuth2 providers
url = https://github.com/ToxicFrazzles/Django-Oauth-Login
license = MIT

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.1
    Authlib>=1.0.1
    requests>=2.28